added more changes to the js

--- a/index.html
+++ b/index.html
@@ -37,5 +37,18 @@
           <input type="checkbox" name="pet-fortuneteller" value="2">Fish<br>
           <input type="checkbox" name="pet-fortuneteller" value="3">Other<br>
         </div>
+        <button type="submit">Submit Survey</button>
+      </form>
+      <span id="fortune-1">
+        <p><b>You are a mild-mannered individual with a lot of promise and kindness.</b></p>
+      </span>
+      <br>
+      <span id="fortune-2">
+        <p><b>You are a balance between hot-headness and level-headedness.</b></p>
+      </span>
+      <span id="fortune-3">
+        <p><b>Your personality burns red hot.</b></p>
+      </span>
+    </div>
   </body>
 </html>
