trying more changes to get to hiding checkboxes.  Not yet working.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
           <input type="checkbox" name="age-fortuneteller" value="2">age 40-59<br>
           <input type="checkbox" name="age-fortuneteller" value="3">age 60 +<br>
         </div>
-        <div class="form-group">
+        <div class="form-group" id="div2">
           <p>What month were you born</p>
             <input type="checkbox" name="month-fortuneteller" value="0">Jan-March<br>
             <input type="checkbox" name="month-fortuneteller" value="1">April-June<br>
             <input type="checkbox" name="month-fortuneteller" value="2">July-September<br>
             <input type="checkbox" name="month-fortuneteller" value="3">October-December<br>
         </div>
-        <div class="form-group">
+        <div class="form-group" id="div3">
           <p>What type of pet do you like best</p>
           <input type="checkbox" name="pet-fortuneteller" value="0">Dog<br>
           <input type="checkbox" name="pet-fortuneteller" value="1">Cat<br>
